[package]
name = "safe_proxy"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]

[dependencies]
iron = "0.4.*"
url = "*"
# safe_core = "0.22.*"
router = "0.0.15"
persistent = "0.0.6"
maidsafe_utilities = "*"
hyper = "*"
mime_guess = "*"
thread-id = "3.0.0"
lazy_static = "*"
unwrap = "~1.1.0"

[dependencies.safe_core]
version = "0.22.*"
features = ["use-mock-routing"]